--- a/index.html
+++ b/index.html
@@ -1010,6 +1010,15 @@
                         <button class="checkout-btn" onclick="addToCart('Ayam Sorienak')">Pesan Sekarang</button>
                     </div>
                 </div>
+                <div class="menu-card" data-category="ayam">
+                    <img src="https://via.placeholder.com/300x200/FFD54F/8B4513?text=Ayam+Sorienak" alt="ayam upin ipin" class="menu-image">
+                    <div class="menu-content">
+                        <h3 class="menu-name">Ayam Upin Ipin</h3>
+                        <p class="menu-price">Rp 20'000</p>
+                        <p class="menu-description">Ayam crispy dengan pilihan sambal: matah, ulek, balado, atau BBQ</p>
+                        <button class="checkout-btn" onclick="addToCart('ayam upin ipin')">Pesan Sekarang</button>
+                    </div>
+                </div>
 
                 <div class="menu-card" data-category="ayam">
                     <img src="https://via.placeholder.com/300x200/FFD54F/8B4513?text=Chicken+Katsu" alt="Chicken Katsu" class="menu-image">
@@ -1564,7 +1573,7 @@
             // AYAM
             'Ayam Sorienak': 15000,
             'Kulit Ayam': 15000,
-
+            'ayam upin ipin': 20000,
             
             // NASI & MIE
 
