--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
                     <img src="https://via.placeholder.com/300x200/FFD54F/8B4513?text=Ayam+Sorienak" alt="ayam upin ipin" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">Ayam Upin Ipin</h3>
-                        <p class="menu-price">Rp 20'000</p>
+                        <p class="menu-price">Rp 20.000</p>
                         <p class="menu-description">Ayam crispy dengan pilihan sambal: matah, ulek, balado, atau BBQ</p>
                         <button class="checkout-btn" onclick="addToCart('ayam upin ipin')">Pesan Sekarang</button>
                     </div>
