--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
                     <div class="menu-content">
                         <h3 class="menu-name">Becek</h3>
                         <p class="menu-price">Rp 13.000 - 14.000</p>
-                        <p class="menu-description">Mi kuah dengan pilihan kuah ori atau kuah susu</p>
+                        <p class="menu-description">Mi becek dengan pilihan kuah ori atau kuah susu</p>
                         <button class="checkout-btn" onclick="addToCartttt('Becek', 13000, 14000)">Pesan Sekarang</button>
                     </div>
                 </div>
@@ -1104,9 +1104,9 @@
                 <div class="menu-card" data-category="nasi">
                     <img src="https://via.placeholder.com/300x200/FFD54F/8B4513?text=Becek" alt="Becek a" class="menu-image">
                     <div class="menu-content">
-                        <h3 class="menu-name">Becek bakso</h3>
+                        <h3 class="menu-name">Becek full toping</h3>
                         <p class="menu-price">Rp 18.000</p>
-                        <p class="menu-description">Mi kuah dengan pilihan kuah ori atau kuah susu dan toping bakso</p>
+                        <p class="menu-description">Mi becek dengan pilihan kuah ori atau kuah susu dan full toping</p>
                         <button class="checkout-btn" onclick="addToCartWithPrice('Becek a')">Pesan Sekarang</button>
                     </div>
                 </div>
