--- a/index.html
+++ b/index.html
@@ -954,9 +954,9 @@
                 <div class="menu-card" data-category="cemilan">
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEim5R8ctKEBq4yTbYSECucFmd3NbLH41dXoC1KUOLc63F-bO438sTJpfEzjAJNX7OLVUZSrFo8DzMrRXaon82RW4wb81K_iTuN400L3SYzi5UyPNRhwDAQe7u1He28EsnVMksytXgYl31cN8MpdzB4aRi8Mzf5H3a368kacQtKrt_GIO5frpXsZK-P-OTqs/s1600/cf84332d-d9fd-401f-a4d2-410dc783851e.jpg" alt="Piscok all" class="menu-image">
                     <div class="menu-content">
-                        <h3 class="menu-name">Piscok all</h3>
+                        <h3 class="menu-name">Piscok Mix komplit</h3>
                         <p class="menu-price">Rp 22.000</p>
-                        <p class="menu-description">Pisang coklat dengan varian rasa: Coklat, Vanilla, Stroberi, Tiramisu, Matcha</p>
+                        <p class="menu-description">Semua rasa jadi 1: Coklat, Vanilla, Stroberi, Tiramisu, Matcha</p>
                         <button class="checkout-btn" onclick="addToCart('Piscok all')">Pesan Sekarang</button>
                     </div>
                 </div>
@@ -1104,7 +1104,7 @@
                 <div class="menu-card" data-category="nasi">
                     <img src="https://via.placeholder.com/300x200/FFD54F/8B4513?text=Becek" alt="Becek a" class="menu-image">
                     <div class="menu-content">
-                        <h3 class="menu-name">Becek bakso</h3>
+                        <h3 class="menu-name">Becek komplit</h3>
                         <p class="menu-price">Rp 18.000</p>
                         <p class="menu-description">Mi kuah dengan pilihan kuah ori atau kuah susu dan toping bakso</p>
                         <button class="checkout-btn" onclick="addToCartWithPrice('Becek a')">Pesan Sekarang</button>
