--- a/index.html
+++ b/index.html
@@ -1415,12 +1415,12 @@
 
                 
                 <div class="menu-card" data-category="dessert">
-                    <img src="https://via.placeholder.com/300x200/FFD54F/8B4513?text=Es+Kepal+Dancow" alt="Es Kepal Dancow" class="menu-image">
+                    <img src="https://via.placeholder.com/300x200/FFD54F/8B4513?text=Es+Kepal+Dancow" alt="Es Kepal" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">Es Kepal </h3>
                         <p class="menu-price">Rp 15.000 - 22.000</p>
                         <p class="menu-description">Es kepal varian milo , matcha, dancow & Mix milo dancow. tambahan topping 22000</p>
-                        <button class="checkout-btn" onclick="addToCarta('Es Kepal Dancow', 15000, 22000)">Pesan Sekarang</button>
+                        <button class="checkout-btn" onclick="addToCarta('Es Kepal', 15000, 22000)">Pesan Sekarang</button>
                     </div>
                 </div>
 
