--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
                     </div>
                 </div>
                 <div class="menu-card" data-category="ayam">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiGVi9EriAHWe7zRWjGmo8q4Dl9wbl3gXflwVJuwaZWPeJ2bWJw2xZeRcRZ-CBYD8d389nAMJxX6WhnMcZIVRzcc4ooeoIxbK4XHkf6yKsPyqdrpZW2OrhREnIneyjAeJCahS0_sTvS6Ql_6G_k1UCEu4ZGhV2AcSa1sGor3ByAARiuVkrpULiLUeeQuHG1/s1600/358915a6-1517-4409-b972-6c423b924a4c.jpg" alt="ayam upin ipin" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiw6Pd0tnyIyU5HkO_tIydo4-TXXNxTeJRGrhAb3v5pyxXJlY4RJjBD5FGgcUzDAOgqIwHp4d2v1KrU5AQ6kJRVaCy50MRngFBaNgf61HnHk4lijOhCe2f8r4J1zL5qJDvl5o8t6wIj1QU3sm3qxgHtc84o0UnrDTbomQiD_Si8JjmH54cF8TehQYLYzgTi/s1600/a90188a3-d0e6-4f5b-a0a3-38fedf3f8b2b.jpg" alt="ayam upin ipin" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">Ayam Upin Ipin</h3>
                         <p class="menu-price">Rp 20'000</p>
@@ -1166,7 +1166,7 @@
                     <div class="menu-content">
                         <h3 class="menu-name">Ice blend (PREMIUM M)</h3>
                         <p class="menu-price">Rp 12.000</p>
-                        <p class="menu-description">Minuman blender dengan bubuk premium. Biar kamu ngerasa fancy, meski dompet lagi krisis.- ukuran Medium</p>
+                        <p class="menu-description">Isi boba chewy yang di jamin beda dari boba yang lain karna ada sensasi manis di dalamnya. Biar kamu ngerasa fancy, meski dompet lagi krisis.- ukuran Medium</p>
                         <button class="checkout-btn" onclick="addToCart('Ice blend (PREMIUM M)')">Pesan Sekarang</button>
                     </div>
                 </div>
@@ -1175,13 +1175,13 @@
                     <div class="menu-content">
                         <h3 class="menu-name">Ice blend (PREMIUM L)</h3>
                         <p class="menu-price">Rp 15.000</p>
-                        <p class="menu-description">Minuman blender dengan bubuk premium. Biar kamu ngerasa fancy, meski dompet lagi krisis. - ukuran large</p>
+                        <p class="menu-description">Isi boba chewy yang di jamin beda dari boba yang lain karna ada sensasi manis di dalamnya. Biar kamu ngerasa fancy, meski dompet lagi krisis. - ukuran large</p>
                         <button class="checkout-btn" onclick="addToCart('Ice blend (PREMIUM L)')">Pesan Sekarang</button>
                     </div>
                 </div>
 
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijdeiE6kwk3Hnb7HykmZu0mAomOYmYmgOXrzYxcUtgv7EngwvdFIgcE8egivBe_ytCjgsWnV1i8Wz5X6Z-um1RdqGYNCqknv8rvHWPQ9vYGNrq9pUCObjw32Yq6ETHOEv-R8v4kNOwdSJkODNoE-YDusCxgB_KWUJ3eiao6qEotK6KJSAxLnKZyat0SH9F/s1600/2ee8f4b3-3f79-4b93-a6af-97c0eeb8ed92.jpg" alt="Squash M" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj7pI_iIzvWljKu1k6tCPZgYtXLDWnKoj0et-W8ugvAuJ69PVqlHAMsHvfT4aW6Yo4Q2P6NLYASVClij78dp5hSjWV79MZ6hSeA8HiJB2x9Bk9rPE5m01usTX3ySPpa3VaQ6Tw16XbvhRzXSuBR7HF8h3eH5Ohj8T2i4rnnoOZAc3o65YeH8i8Q7WX_Fj3h/s1600/Screenshot%202025-07-16%20105515.png" alt="Squash M" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">Squash (M)</h3>
                         <p class="menu-price">Rp 10.000</p>
@@ -1199,7 +1199,7 @@
                     </div>
                 </div>
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijdeiE6kwk3Hnb7HykmZu0mAomOYmYmgOXrzYxcUtgv7EngwvdFIgcE8egivBe_ytCjgsWnV1i8Wz5X6Z-um1RdqGYNCqknv8rvHWPQ9vYGNrq9pUCObjw32Yq6ETHOEv-R8v4kNOwdSJkODNoE-YDusCxgB_KWUJ3eiao6qEotK6KJSAxLnKZyat0SH9F/s1600/2ee8f4b3-3f79-4b93-a6af-97c0eeb8ed92.jpg" alt="Squash L" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj7pI_iIzvWljKu1k6tCPZgYtXLDWnKoj0et-W8ugvAuJ69PVqlHAMsHvfT4aW6Yo4Q2P6NLYASVClij78dp5hSjWV79MZ6hSeA8HiJB2x9Bk9rPE5m01usTX3ySPpa3VaQ6Tw16XbvhRzXSuBR7HF8h3eH5Ohj8T2i4rnnoOZAc3o65YeH8i8Q7WX_Fj3h/s1600/Screenshot%202025-07-16%20105515.png" alt="Squash L" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">Squash (L)</h3>
                         <p class="menu-price">Rp 12.000</p>
@@ -1213,7 +1213,7 @@
                     <div class="menu-content">
                         <h3 class="menu-name">Boba crot (M)</h3>
                         <p class="menu-price">Rp 13.000</p>
-                        <p class="menu-description">Minuman boba, pearl-nya kenyal. Nggak kayak chat dia yang kering banget. - ukuran medium</p>
+                        <p class="menu-description">minuman segar dengan popping boba crot di dalam, rasakan sendiri sensasi crot di dalam dari boba ya, bukan dari si doi coy 🤭. - ukuran medium</p>
                         <button class="checkout-btn" onclick="addToCart('Boba Crot (M)')">Pesan Sekarang</button>
                     </div>
                 </div>
@@ -1223,7 +1223,7 @@
                     <div class="menu-content">
                         <h3 class="menu-name">Boba crot (L)</h3>
                         <p class="menu-price">Rp 15.000</p>
-                        <p class="menu-description">Minuman boba, pearl-nya kenyal. Nggak kayak chat dia yang kering banget. - ukuran large</p>
+                        <p class="menu-description">minuman segar dengan popping boba crot di dalam, rasakan sendiri sensasi crot di dalam dari boba ya, bukan dari si doi coy 🤭 - ukuran large</p>
                         <button class="checkout-btn" onclick="addToCart('Boba Crot (L)')">Pesan Sekarang</button>
                     </div>
                 </div>
@@ -1326,7 +1326,7 @@
                     </div>
                 </div>
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjJ-45OnP-asDbXntepvO4aq7fh5z9lK1yYWxNO2ak5cIW4q0m4bvIhC1POS2lHMTFTMr1lX5Na6T6WCFvW8dUvjACGTcaHEKyohy3CJcbzLjXDRxBT7xlVKAjuxYFXTLaT0sjcM0w9-HJ34oGDRwb0E5y_qYwVNSAAFZjpFMcy_IeNykYY8qphMNHXo75q/s1600/e82430fa-69be-411b-bde5-18d8e438adc9.jpg" alt="Coffee Susu M" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiKuHaNXA8hnTcHls0oAwrX9rqrwau1I4O1IWOE2aT7tdiescDfa6FVcHHqjIuF_kGecAWIFWtTeXh7TaktNBLYp5xbbI4reanWHVW9P5HulXabLPMo2Vy0GuU-Ue-hSFTDVCRO1LNiQSAtIT4PYrtbcKq3N8ddaU4RpZ7LthAY2h7whvuvhCzEfXOmoXXw/s1600/c2062182-7083-478c-bc72-ee152c760a2c.jpg" alt="Coffee Susu M" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">black coffee pink (M)</h3>
                         <p class="menu-price">Rp 13.000</p>
@@ -1336,7 +1336,7 @@
                 </div>
 
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjJ-45OnP-asDbXntepvO4aq7fh5z9lK1yYWxNO2ak5cIW4q0m4bvIhC1POS2lHMTFTMr1lX5Na6T6WCFvW8dUvjACGTcaHEKyohy3CJcbzLjXDRxBT7xlVKAjuxYFXTLaT0sjcM0w9-HJ34oGDRwb0E5y_qYwVNSAAFZjpFMcy_IeNykYY8qphMNHXo75q/s1600/e82430fa-69be-411b-bde5-18d8e438adc9.jpg" alt="Coffee Susu L" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiKuHaNXA8hnTcHls0oAwrX9rqrwau1I4O1IWOE2aT7tdiescDfa6FVcHHqjIuF_kGecAWIFWtTeXh7TaktNBLYp5xbbI4reanWHVW9P5HulXabLPMo2Vy0GuU-Ue-hSFTDVCRO1LNiQSAtIT4PYrtbcKq3N8ddaU4RpZ7LthAY2h7whvuvhCzEfXOmoXXw/s1600/c2062182-7083-478c-bc72-ee152c760a2c.jpg" alt="Coffee Susu L" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">black coffee pink (L)</h3>
                         <p class="menu-price">Rp 15.000</p>
@@ -1345,7 +1345,7 @@
                     </div>
                 </div>
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEglF7mg0Dd4A3tJ8iVSQPdr3sdcJGEjb4IS3LfWQJ2I_DNV9Oa5H62s7hHRB2fJZYbZvIObm0mFgQFI2P7xrYdNUtAl3H8Pdttni-d0s0fR7Rz-5MngINV8b1SL1NGL0WjFVpgj5MbtnP8G71n_-UgmxT3a3wn7m_OXsJCPuJ1pb8c1UHspzTO6z4cZB0sD/s1600/d2af10ec-5a7c-4716-9393-6aa2f9ebe26e.jpg" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihQbuQ0VkgXtqzmHNxejYcHd15ILo2dXebhh4z71oZ0m1Wv_jVIzJK9ZnzkD0FHYm0TKn7MHzilIm5ozUgYWI1xa00bNVigb1M73B9vJ1BwUlQ7tTZIro3BCX9rFYgXp9QSOwD2gLJEKI_BRU6OP_RLAcxPhO-5n-eFLyTADiOv6RmFxn7T6w1XWbjPWZI/s1600/cbb1978a-581c-496c-8d71-e72bffbd4d14.jpg" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">susu kuntilanak (M)</h3>
                         <p class="menu-price">Rp 13.000</p>
@@ -1355,7 +1355,7 @@
                 </div>
 
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEglF7mg0Dd4A3tJ8iVSQPdr3sdcJGEjb4IS3LfWQJ2I_DNV9Oa5H62s7hHRB2fJZYbZvIObm0mFgQFI2P7xrYdNUtAl3H8Pdttni-d0s0fR7Rz-5MngINV8b1SL1NGL0WjFVpgj5MbtnP8G71n_-UgmxT3a3wn7m_OXsJCPuJ1pb8c1UHspzTO6z4cZB0sD/s1600/d2af10ec-5a7c-4716-9393-6aa2f9ebe26e.jpg" alt="Coffee Susu L" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihQbuQ0VkgXtqzmHNxejYcHd15ILo2dXebhh4z71oZ0m1Wv_jVIzJK9ZnzkD0FHYm0TKn7MHzilIm5ozUgYWI1xa00bNVigb1M73B9vJ1BwUlQ7tTZIro3BCX9rFYgXp9QSOwD2gLJEKI_BRU6OP_RLAcxPhO-5n-eFLyTADiOv6RmFxn7T6w1XWbjPWZI/s1600/cbb1978a-581c-496c-8d71-e72bffbd4d14.jpg" alt="Coffee Susu L" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">susu kuntilanak (L)</h3>
                         <p class="menu-price">Rp 15.000</p>
@@ -1373,7 +1373,7 @@
                     </div>
                 </div>
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEia5RiLDhNRe_dR0n4xft2BDnp9BTSjWOVrnc8f1ZEDS4OkQKru74AvLzrvmU4nF79UFejSIx31rOXw7G7_WYnKmNVDoxXznw7yK_nCQSMUPG3-vawLvbwoCMNCoSVti8wKezgtvcQUPetmykkgQwW2NA-PZ2fMWTCRK9rWiEGBoHlawwWrZ04FyV8HZAII/s1600/02bce445-1720-4e6f-b886-337253f5c23f.jpg" alt="Sop Buah" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj1D6Dc3vMxArH_T8mW5ilPU1QMBZ1OLYzzGCLJ2w9HkALmhJrXeRH6rRj8UxJ24GYOlA4pGp207iryTuzl8mE8kd_-FpzW-I5QEfP66HO1mwDo-tiapNUyBWqKpAt9H803APuQHPNbCKl8363ow-q-Geo36mDnQI74l32PlXA6uud1O6YKSQZ50GSqzwaI/s1600/d65b9189-d5c9-4895-b751-6f1f2fc56f8b.jpg" alt="Sop Buah" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">sweet orange</h3>
                         <p class="menu-price">Rp 8.000 - 10.000</p>
@@ -1412,7 +1412,7 @@
                 </div>
 
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh_RXEHoPZ0uEG77Z3nhglpp9NDEdHfAohBxe3pk6591Mo4WMzXRE96SZmQLPVCftrwLsst4ELmgytBoRlNOtTaOIP1b3IbKnKtQwgZ6NVv2Y4FT7OAH7FIFR08LTMgWea30sar9N9ta4_qoivQM9E6a_LZXQ-2BMrRMfflHCy79TBtG-fxd4-GmkLaYOrh/s1600/db04b348-8f04-4c7b-a47e-94cf08156cf1.jpg" alt="Jus Alpukat" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhdJ9BVUW4AmIupUquXfXns8J7mQ3gM1Vxf0nCAis6miWJ1I6D95qEH5HY3JitVHOrwBbHaseyKLKYB3Wl38yPLcspjHLNnHAwmmOb93EFh4RlQ67jZsmYg3xRPIBxx-etiX9qNYxdyT3hzZUoLGnUc7XLdNIW6nTnII9Oc8PlejqDnTSX-g3ORrAvGiZvQ/s1600/Screenshot%202025-07-16%20110316.png" alt="Jus Alpukat" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">Jus Alpukat</h3>
                         <p class="menu-price">Rp 10.000</p>
@@ -1421,7 +1421,7 @@
                     </div>
                 </div>
                 <div class="menu-card" data-category="minuman">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi6lwF1YDcHtSclfQSa75AAwG0GCz0R8Sh7H7wyGqXLd1JRvnp4P83JetvVUTqdyCv22Jh1msmHnutJ-mxtIezG9701jDx5umlJ5pu0P47m7Nhg5met0P-BG0CePjAtfVmo_lg_hcARiiJieYlLyLAeaP4TVeKQlRuLyMVFvvvUwcmG-B1jDEOjfPFhdKfp/s1600/Screenshot%202025-07-14%20200711.png" alt="Jus Alpukat" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhoRiyIGOuaYlwG3Q7AaEnJMgvbUBhK8FjaTylohVdm4kQZI1k19THbxSstUBQHpjpvFU8-fqgNpaeR7nnvBcXUb1XC6olt4lhkccIgk6d36YHkfHyodR3Z2ClDz6EAxKLcwRzdUdwzw1e_bgQA0T0loJqafdvErP0BS9rpOMWMFzrmx9LFiSyd-Vvrtgzm/s1600/Screenshot%202025-07-16%20105905.png" alt="Jus Alpukat" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">jus semangka</h3>
                         <p class="menu-price">Rp 10.000</p>
@@ -1459,7 +1459,7 @@
                     </div>
                 </div>
                 <div class="menu-card" data-category="dessert">
-                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhJdX1wgJkUtcAi12RLA4-INmdE8TNP-7c8u848tK0PjjuJ89-1nVntKKLrb8b6JcruK0ATHzi2TAW-LkEEHMGLbkjIT2KLJwZuzezqGnseipkoSN6jJR7w2rnNdckJBrlq1T2ty74isinGLWo9bq8_uFYMI8I7maDmULPzU8eDrEOB_x7priFdldfyQRW4/s1600/72bfe50c-55b9-4fcc-b1a8-fe0c5f271c1a.jpg" alt="Alcok" class="menu-image">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi8tkimrJIoT4l9Gl-1cgD2dY0Mpo2aKQJI05UQESG02wdw8E7s08TGkYgxdstRwrbvuet-Vj7wsvLJ457opml01Kvu-pvBiUTUJXQGGrsRMzeqsAv07S8HH0SU3tTCZ3Qhk0CiRjqo_1JPbCb08z0YPYqfLYiIzdDeSShldDy12exSdNgAQMrPHgc-_Lcs/s1600/cddd4fab-9eff-41ec-8d28-28e740db0684.jpg" alt="Alcok" class="menu-image">
                     <div class="menu-content">
                         <h3 class="menu-name">Apucok</h3>
                         <p class="menu-price">Rp 10.000</p>
@@ -1501,7 +1501,7 @@
                     <div class="menu-content">
                         <h3 class="menu-name">Es Kepal dancow</h3>
                         <p class="menu-price">Rp 15.000 - 22.000</p>
-                        <p class="menu-description">Susu Dancow Asli , Bukan Liat dia sama yang lain Dancow menagis dipojokan. tambahan topping 22000</p>
+                        <p class="menu-description">Susu Dancow Asli , Bukan Liat dia sama yang lain Dancow menangis dipojokan. tambahan topping 22000</p>
                         <button class="checkout-btn" onclick="addToCarta('Es Kepal dancow', 15000, 22000)">Pesan Sekarang</button>
                     </div>
                 </div>
