--- a/index.html
+++ b/index.html
@@ -1461,7 +1461,7 @@
                 <div class="menu-card" data-category="dessert">
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEi8tkimrJIoT4l9Gl-1cgD2dY0Mpo2aKQJI05UQESG02wdw8E7s08TGkYgxdstRwrbvuet-Vj7wsvLJ457opml01Kvu-pvBiUTUJXQGGrsRMzeqsAv07S8HH0SU3tTCZ3Qhk0CiRjqo_1JPbCb08z0YPYqfLYiIzdDeSShldDy12exSdNgAQMrPHgc-_Lcs/s1600/cddd4fab-9eff-41ec-8d28-28e740db0684.jpg" alt="Alcok" class="menu-image">
                     <div class="menu-content">
-                        <h3 class="menu-name">Apucok</h3>
+                        <h3 class="menu-name">alpucok</h3>
                         <p class="menu-price">Rp 10.000</p>
                         <p class="menu-description">Alpukat kocok, nggak pakai Milo karena manisnya kamu aja udah bikin gula minder</p>
                         <button class="checkout-btn" onclick="addToCart('Apucok')">Pesan Sekarang</button>
